<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".LoginLeader">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/scoutstunisiens"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_leader"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:inputType="number"
            android:maxLength="10"
            android:autofillHints="@string/information1" />

        <Button
            android:id="@+id/btn_connecter"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom">
        <include layout="@layout/signature"
            />
    </LinearLayout>


</LinearLayout>